# Projeto-Confeitaria-FastAPI---Python

./: .coverage  .env.example  .gitignore  SRE_REPORT_VERCEL.md  backend_logs.txt  coverage.txt  coverage_fix.txt  docker-compose.yml  final_pytest_results.txt  index.py  main.py  package-lock.json  package.json  pytest_output.txt  readme.md
apps/backend/: .coverage  Dockerfile  alembic.ini  cov_table.txt  coverage_filtered.txt  coverage_full.txt  coverage_report.txt  final_cov.txt  full_cov.txt  last_output.txt  low_cov.txt  low_coverage.txt  low_range.txt  pyproject.toml  pytest_clean_log.txt  pytest_log.txt  pytest_output.txt  pytest_output_final.txt  requirements.txt  results.txt  test.db  test_failures.txt  test_list.txt  test_mapper_out.txt  test_output.txt  test_pres_long.txt  test_pres_out.txt  test_raw.txt  test_results.txt  test_summary.txt  vercel.json
apps/backend/api/: index.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 001_add_endereco_entrega.py
apps/backend/src/: main.py
apps/backend/src/application/gateways/: repositorioDeEstoque.py  repositorioDeOrder.py  repositorioDePedido.py  repositorioDeReceita.py  repositorioDeUsuario.py
apps/backend/src/database/: __init__.py
apps/backend/src/infrastructure/: dependencies.py
apps/backend/src/infrastructure/auth/: clerk.py
apps/backend/src/infrastructure/gateway/: __init__.py  pedidoRepository.py  receitaRepository.py  userRepository.py
apps/backend/src/infrastructure/mappers/: pedidoMapper.py  (+2 more)
apps/backend/src/test/: test_Presentation.py  test_acceptance.py
(+104 files in other folders)
