[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "confeitaria-backend"
version = "0.1.0"
description = "Backend API for Confeitaria"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "sqlalchemy==2.0.35",
    "svix==1.34.0",
    "email-validator==2.1.1",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
]